# td2d2

./: Cargo.toml
assets/: atlas1.psd  map1.ldtk
src/: main.rs
src/game/: cons.rs  mod.rs  plugin_camera.rs  plugin_player.rs
src/game/little_brain/: actions.rs  find_random_location.rs  mod.rs  move_to_destination.rs  scorers.rs
src/game/map/: mod.rs
src/game/npc/: mod.rs
