[package]
name = "td2d2"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.12.*", features = ["dynamic_linking"] }
bevy_editor_pls = "0.6.0"
bevy_spine = "0.7.0"
bevy_xpbd_2d = "0.3.2"
big-brain = "0.18.0"
leafwing-input-manager = "0.11.2"
rand = "0.8.5"
seldom_state = "0.8.0"
serde = "1.0.193"
